Arreglado problema con las imágenes

--- a/Manual de usuario-v0.2.html
+++ b/Manual de usuario-v0.2.html
@@ -33,22 +33,22 @@
 <ul>
 <li>Añadir un nuevo botón al panel de “BarraG”, que sea parecido a los otros botones de ese panel.</li>
 </ul>
-<p><img src="C:/Users/salvador/Downloads/MenuAlgoritmos.png" alt="Panel"></p>
+<p><img src="./images/MenuAlgoritmos.png" alt="Panel"></p>
 <ul>
 <li>Para ese botón, se le añade un nuevo valor en el evento que activa.</li>
 </ul>
-<p><img src="C:/Users/salvador/Downloads/Evento.png" alt="Evento"></p>
+<p><img src="./images/Evento.png" alt="Evento"></p>
 <ul>
 <li>
 <p>En el script de Control de control, realizar los siguientes pasos:</p>
 <ul>
 <li>
 <p>Modificar el enumerado de esta línea para añadir el algoritmo que quieras implementar<br>
-<img src="C:/Users/salvador/Downloads/EnumAlgoritmos.png" alt="Enum"></p>
+<img src="./images/EnumAlgoritmos.png" alt="Enum"></p>
 </li>
 <li>
 <p>En la función <code>ejecutarAlgoritmo()</code>, añadir en la sentencia <em>switch-case</em> el valor que hayas asignado al evento del botón, y poner en este caso un código parecido al siguiente:<br>
-<img src="C:/Users/salvador/Downloads/Switch_Case.png" alt="Switch"></p>
+<img src="./images/Switch_Case.png" alt="Switch"></p>
 </li>
 </ul>
 </li>
@@ -56,11 +56,11 @@
 <p>En el script del ejecutor, realizar los siguientes pasos:</p>
 <ul>
 <li>Añadir en la función <code>Starter()</code> el mensaje de comienzo para tu algoritmo<br>
-<img src="C:/Users/salvador/Downloads/Starter.png" alt="Start"></li>
+<img src="./images/Starter.png" alt="Start"></li>
 <li>Añadir en la función <code>èjecutarPaso()</code> un nuevo caso en la sentencia <em>switch-case</em><br>
-<img src="C:/Users/salvador/Downloads/Paso.png" alt="Paso"></li>
+<img src="./images/Paso.png" alt="Paso"></li>
 <li>Añadir en la función <code>ejecutarTodo()</code> un caso para el nuevo algoritmo que hayas implementado. Esta función está sobre todo si quieres que ocurra algo especial en el caso de que quieras ejecutarlo todo de golpe, en caso contrario solo debes copiar y pegar el código de los anteriores casos.<br>
-<img src="C:/Users/salvador/Downloads/Todo.png" alt="Todo"></li>
+<img src="./images/Todo.png" alt="Todo"></li>
 </ul>
 </li>
 </ul>
